tests/ui/range/range-inclusive-pattern-precedence.stderr
error: the range pattern here has ambiguous interpretation
  --> $DIR/range-inclusive-pattern-precedence.rs:15:10
   |
LL |         &10..=15 => {}
   |          ^^^^^^^
   |
help: add parentheses to clarify the precedence
   |
LL |         &(10..=15) => {}
   |          +       +

warning: `...` range patterns are deprecated
  --> $DIR/range-inclusive-pattern-precedence.rs:11:9
   |
LL |         &0...9 => {}
   |         ^^^^^^ help: use `..=` for an inclusive range: `&(0..=9)`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
note: the lint level is defined here
  --> $DIR/range-inclusive-pattern-precedence.rs:7:9
   |
LL | #![warn(ellipsis_inclusive_range_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

